Edits to first half of case study chapter 5 (chum)

--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -23,7 +23,7 @@ knitr::include_graphics("figure/chum-map.png")
 ```
 
 
-The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival [although there are some scale/growth data in @debertinMarineGrowthPatterns2017]. Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004a identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed integrated <!--WSP?--> status assessment has not been developed for ISC chum. <!--LW: Does @godboutStockStatusWild2004 not count as a full status assessment? CW:I think it is not a WSP assessment. CH: correct,  Godbout et al. was developed pre-WSP-->  
+The ISC Chum SMU is considered data-limited. While escapement time series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions (i.e., not all streams counted each year, some CUs have no counts in some years). In addition, run reconstructions of recruitment are uncertain, making the development of benchmarks based on spawner and recruitment data problematic. There are also no data on marine survival [although there are some scale/growth data in @debertinMarineGrowthPatterns2017]. Other unique characteristics of this SMU include high contrast in abundance among CUs and relatively low correlation in abundance among CUs over time. The SMU covers a large area with many diverse watersheds, flow regimes, and ocean entry locations. Wild Salmon Policy status assessments have not been done on any ISC Chum CUs. @godboutStockStatusWild2004a identified variable but stable status in the central and southern portion of the SMU <!--KH: between years 19xx and 20xx-->, with declines in the north, especially in the region defined by <!-- the --> Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status. At this time, a peer-reviewed integrated <!--WSP?--> status assessment has not been developed for ISC chum. <!--LW: Does @godboutStockStatusWild2004 not count as a full status assessment? CW:I think it is not a WSP assessment. CH: correct,  Godbout et al. was developed pre-WSP-->  
 
 
 <!--CH: Suggestion to revised the first sentence to: "Holt et al. (in review) provide steps for applying LRPs to salmon SMUs, one of which is to identify if the status of data-deficient CUs within the SMU can be represented by other data-rich CUs."-->Step 3 of the Guidelines for Applying LRPs gives guidance on what evidence would be required to use known status of some CUs for other CUs that are data-limited. This is relevant for the ISC Chum case study because two CUs have no observations in some years (Upper Knight and Bute Inlet). For data deficient CUs to be represented by CUs with data, there needs to be evidence that the data deficient CUs have similar threats, environmental drivers, biological characteristics, and population <!--CH note: I changed habitat capacity to population capacity in Guidelines Paper, and all Case studies--> capacity as CUs with sufficient data. <!-- CH: suggest to only include footnote at first instance in the WP, at least for now: ^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> <!--CW: do we need to include the section?(Guidelines paper, Section 4.1.3). CH: No, I think it's okay to leave out the section when refering to the other WP-->
@@ -32,7 +32,7 @@ The ISC Chum SMU is considered data-limited. While escapement time series are av
 Upper Knight and Bute Inlet CUs are both associated with long fjords that run from the Broughton Archipelago through the Coast Mountains. They include rivers with headwaters in the Cariboo region farther inland than other CUs in the SMU (Figure \@ref(fig:chum-map)). Southern Coastal Streams, Georgia Strait, and Howe Sound-Burrard Inlet also include portions of the Coast Mountains and some glaciers, but to a lesser extent and their inlets are shorter and their watersheds do not go as far inland. Upper Knight and Bute Inlet are unique in that they are the only CUs in the SMU that only include watersheds that drain into the upper end of long inlets. They are both more remote than the other CUs, which is part of why there are fewer observations. <!-- LW: check with PVW if this is true--> 
 
 
-Chum from these two CUs are exposed to different threats to habitat, survival and productivity than the other five CUs. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. The glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event<!--CH: I was curious and had to look that one up; interesteing!-->. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Generally, it is known that competition with other salmon in the ocean and ocean conditions [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a] affect chum salmon in this SMU. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and low productivity years<!--CH suggest omitting next phrase, as I'm not sure how boom & bust is different from very high and low values with high variability; we didn't do a formal analysis for cyclic patterns: ", and boom and bust cycles of abundance"-->. These CUs also have lower habitat capacity, with fewer streams with Chum spawners than the other CUs (Table \@ref(tab:CU-summary)).<!--LW: check with PVW if this is just fewer monitored streams--> Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. In other SMUs where the quality of data differs for a subset of CUs, careful consideration should be given to whether abundance, productivity, and their trends can be reliably estimated using data from CUs with data of higher quality. 
+Chum from these two CUs <!--KH: suggestion to re-state 2 CU names since new paragraph; or, move to include in above paragraph--> are exposed to different threats to habitat, survival and productivity than the other five CUs. While these two CUs have, on average, lower impacts from forest harvest, impervious area, and roads, they have larger impacts from forest defoliation and pests [@pacificsalmonfoundationPacificSalmonExplorer2021]. They may also have different levels of risk from disturbances such as glacier melt, avalanches, debris flows, and floods because they have large melting glaciers associated with lakes, steep slopes, and unstable terrain. The glacial lake outburst flood that caused a debris flow in the Southgate River in November 2020 is one example of such an event<!--CH: I was curious and had to look that one up; interesteing!-->. These events are capable of killing an entire brood year of eggs/alevins and reshaping habitat with impacts on spawning habitat and stream ecosystems for many years. They can also change water quality in marine habitats. These catastrophic events may be less likely in watersheds with gentler topography and that lack glaciers and glacial lakes. The hydrology of these two CUs likely differs from that of other CUs with more low-lying topography. These watersheds have large glaciers and high amounts of snowmelt, compared to more low-elevation coastal watersheds with more rain-dominant hydrographs. Marine conditions when smolts enter the ocean in these systems may vary from that of the other five CUs, as they are entering the upper ends of large fjords. Generally, it is known that competition with other salmon in the ocean and ocean conditions [@debertinMarineGrowthPatterns2017, @litzCompetitionOddyearPink2021a] affect chum salmon in this SMU. Regarding biological characteristics, Bute Inlet and Upper Knight have a higher proportion of summer-run populations of Chum (Table \@ref(tab:CU-summary)). Recruits per spawner of the Upper Knight and Bute Inlet CUs (estimated using CU-level infilling, which introduces error) are more variable than for other CUs in this SMU, exhibiting very productive years (>100 recruits per spawner) and low productivity years<!--CH suggest omitting next phrase, as I'm not sure how boom & bust is different from very high and low values with high variability; we didn't do a formal analysis for cyclic patterns: ", and boom and bust cycles of abundance"-->. These CUs also have lower habitat capacity, with fewer streams with Chum spawners than the other CUs (Table \@ref(tab:CU-summary)).<!--LW: check with PVW if this is just fewer monitored streams--> Based on these differences, the burden of proof is not met, and we cannot infer the status for Bute Inlet and Upper Knight from the other CUs. Note that these criteria used to evaluate whether status can be borrowed for these CUs extends to whether reliable spawner escapement data can be infilled using escapement in the other CUs. Thus, these CUs are dropped for years with no spawner data in this case study. <!-- KH: Suggestion to move this next sentence to the discussion / lessons learned section; it seems out of place here --> In other SMUs where the quality of data differs for a subset of CUs, careful consideration should be given to whether abundance, productivity, and their trends can be reliably estimated using data from CUs with data of higher quality.
 
 
 ```{r CU-summary, echo=FALSE}
@@ -47,17 +47,19 @@ csasdown::csas_table(d,
 
 <!-- LW: should alpha and exploitation rate be added to this table as justification for which percentile benchmarks were chosed? Also available in Holt et al. 2018.
   CW: I suggest removin the UBM estimates, as we do not use them. And I like the idea of adding alpha and ER.
+  KH: Do the UBM ever get used in the Salmon Scanner tool? If so, you could leave, but if not, remove.  Also - I like the idea of including the productivity and ER values (even if a range) used to justify which percentile to use.
+  
 -->
 
 
 Benchmarks based on spawner-recruit relationships are unreliable if  <!-- CH: SR data always uncertain to an extent. I suggest rewording next phrase to "underlying recruitment data are unreliable"-->there is uncertainty in the spawner and recruit data. One alternative is benchmarks calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks). Previous work on developing WSP benchmarks for Inner South Coast Chum has shown that percentile benchmarks can be comparable to those based on stock-recruit relationships when productivity is relatively high and harvest is relatively low [@holtEvaluatingBenchmarksBiological2018]. In other cases, percentile benchmarks may be inappropriate due to low productivity or high harvest, <!--CH: suggest changing last phrase to : "resulting in a shifting baseline [@holtEvaluatingBenchmarksBiological2018]. We didn't look very much at non-stationarity in that paper."--> and because they do not account for non-stationarity in recruitment dynamics [@holtEvaluatingBenchmarksBiological2018].
 
 
-We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU without stock-recruitment or habitat-based benchmarks. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and logistic regression based on aggregate abundance. For proportions, we used percentile benchmarks and multidimensional status assessments derived from the Pacific Salmon Status Scanner (Pestal et al., in prep.) to determine the status of component CUs. For the logistic regressions, we used percentile and S~gen~ benchmarks. However, after attempting S~gen~ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt *et al.* (in review). 
+We chose the ISC Chum SMU as a case study because we were interested in exploring LRP options for a data-limited SMU without stock-recruitment or habitat-based benchmarks. We applied LRPs based on two methods: proportions of CUs above their lower benchmark, and <!--KH: describing this as "aggregate abundance-based LRPs estimated using the logistic regression approach" would be more consistent with the was methods are described in chapter 2 -->logistic regression based on aggregate abundance. <!--KH: The following sentences duplicate info presented below in the CU STATUS ESTIMATION section; I suggest removing them from here -->For proportions, we used percentile benchmarks and multidimensional status assessments derived from the Pacific Salmon Status Scanner (Pestal et al., in prep.) to determine the status of component CUs. For the logistic regressions, we used percentile and S~gen~ benchmarks. However, after attempting S~gen~ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt *et al.* (in review). 
 
 ## DATA
 
-We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed fishery catch to CUs within the run reconstruction model. As a result, we did not consider recruitment time-series to be reliable enough to estimate stock recruitment-based benchmarks such as S\textsubscript{MSY} and S\textsubscript{gen}.  We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
+We used the same data used in @holtEvaluatingBenchmarksBiological2018, but updated with five additional years of data. Available data included spawner abundance time series from 1959 - 2018 and corresponding CU-level recruitment estimated from run reconstruction. Spawner abundance series rely heavily on infilling; 60% of observations (count of spawners for an individual stream, in a given year) were missing and needed to be infilled. <!--KH: We chose to apply infilling procedures for this SMU when possible to develop metrics of total spawner abundance since infilling methods for this SMU have been previously peer-reviewed (@holtEvaluatingBenchmarksBiological2018).This differs from the approach taken for WCVI Chinook, in which infilling methods had not been established due to high and variable hatchery influences.--> Recruitment data are considered highly uncertain for all ISC Chum CUs due to uncertain assumptions required to assign mixed fishery catch to CUs within the run reconstruction model. As a result, we did not consider recruitment time-series to be reliable enough to estimate stock recruitment-based benchmarks such as S\textsubscript{MSY} and S\textsubscript{gen}.  We did however use spawner recruit model fits to provide approximate estimates of CU-level productivity, which are used to inform the application of percentile-based benchmarks.
 
 
 @vanwillInnerSouthCoast2014 provides more details on the data sources, infilling procedures and run reconstruction, which were reproduced for this study. We did not include the Lower Fraser or Fraser Canyon Chum CUs. More details can be found in Appendix \@ref(app:appendix-chum). We removed systems with extensive hatchery influence (Qualicum River, Little Qualicum River, and Puntledge River, within the Georgia Strait CU) aligned with recommendations from @withlerGeneticallyBasedTargets2018. Hatchery contribution to spawning was near 100% for these systems.
@@ -75,13 +77,13 @@ For this case study, we consider two approaches for characterizing CU status:
 The first approach, which uses the Salmon Scanner developed by the State of the Salmon program (Section \@ref(rapidToolMethods)) (Pestal et al. in prep.) is consistent with Canada's WSP and is recommended by Holt *et al.* (in review)<!--^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]--> as the method that should be used to estimate CU status when using the proportional LRP approach. The second approach is presented for comparison with the Salmon Scanner.
 
 
-When applying the Salmon Scanner to ISC Chum, we used percentile benchmarks as both upper and lower benchmarks (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend on percentile-based benchmarks.
+When applying the Salmon Scanner to ISC Chum, we used percentile benchmarks as both upper and lower benchmarks <!--KH: suggestion to add "...when they were available for a CU. For CUs in which percentile benchmarks were not available, the Salmon Scanner tool used trends in spawner abundance as a basis for assessing CU status" --> (Figure \@ref(fig:decision-tree)).  As a result, both of our approaches to CU status estimation depend <!--at least partially(?) --> on percentile-based benchmarks.
 
 
 Percentile-based benchmarks can be applied to assess status of CUs when other data - like benchmarks based on productivity or habitat - are not available or reliable [@holtEvaluatingBenchmarksBiological2018; @clarkEvaluationPercentileApproach2014]. The suitability of percentile benchmarks was evaluated for ISC Chum by @holtEvaluatingBenchmarksBiological2018, who tested how well percentile benchmarks matched benchmarks from stock-recruit parameters, using retrospective and simulation analyses. @holtEvaluatingBenchmarksBiological2018 also calculated benchmarks based on stock-recruit model parameters for ISC Chum stocks, but did not recommend them due to uncertainty in spawner and recruit data. They tested how well a 25% percentile benchmark (and higher values up to 50%) compared to estimates of S\textsubscript{gen} for these CUs. They found that percentile benchmarks (from 25-50%) under moderate to high harvest rates and low to moderate productivity tended to underestimate 'true' S\textsubscript{gen} values (estimated from the same data), which would lead to optimistic and incorrect status assessments. More work on alternatives to percentile benchmarks were needed in this case.
 
-
-For this case study, percentile benchmarks were calculated using the infilled escapement time series (not smoothed) and status for year $i$ was determined by comparing the geometric mean (4 year window, ending with year $i$) with the benchmark. 
+<!--KH: some suggested edits below to clarify that 'smoothed' means generational mean -->
+For this case study, percentile benchmarks were calculated using the infilled <!-- annual--> escapement time series (<!--i.e., -->not smoothed <!--"using a generational geometric mean" -->) and status for year $i$ was determined by comparing the geometric mean<!--replace 'geometric' with 'generational' here --> (<!-- geometric mean on a--> 4 year window, ending with year $i$) with the benchmark.  <!-- This approach of using raw (unsmoothed) escapements when calculating benchmarks, and generational smoothed escapements when estimating CU status relative to benchmarks, is consistent with the approaches taken for our other two case studies, as well as with the recommendations in Holt et al. (in prep)--> 
 
 
 \renewcommand*{\arraystretch}{1.5}
@@ -180,10 +182,19 @@ knitr::include_graphics('figure/fig_percentile_bm_rel_abd.png')
 
 ### Methods
 
-We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
+We evaluated whether the proportion of CUs above their lower benchmark could be predicted by aggregate abundance using logistic regression models. We tested this using percentile benchmarks. <!-- KH: consider inserting Sgen text below here -->  These methods used four CUs with over 50 years of data and appropriate percentile benchmarks (North East Vancouver Island, Loughborough, Georgia Strait, and Howe Sound-Burrard Inlet). Aggregate abundance (predictor variable) was calculated using only these four CUs. We omitted Bute Inlet and Upper Knight (both had CU-level infilling in recent years) and Southern Coastal Streams (no appropriate percentile benchmark). Refer to Section \@ref(MethodsChapter) for more details. 
+
+<!-- 
+KH: suggestion to move the following description (which was at the end of the CONTEXT section above) into the above paragraph.  
+
+For the logistic regressions, we used percentile and S~gen~ benchmarks. However, after attempting S~gen~ benchmarks we decided not to use them because of unreliable stock-recruit data. Using recruitment data would not satisfy reliability principles in Holt *et al.* (in review).
+
+Could write it as something like "While we initially considered logistic regression-based LRPs that used S~gen~ as a lower CU benchmark instead of percentiles, we decided to drop this approach due to unreliable  stock recruit data. Using recruitment data would not satisfy reliability principles in Holt *et al.* (in review)."
 
 
-Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic-regression based LRPs for this SMU as was completed for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
+--> 
+
+Due to poor logistic model fits using the entire 1953-2018 time series, we did not conduct retrospective analyses of logistic regression-based LRPs for this SMU as was completed <!--KH: done instead of completed? --> for the Interior Fraser River Coho case study. The characteristics of the data that led to poor logistic model fits are highlighted in the results section below. 
 
 
 Projection-based LRPs are an alternative aggregate abundance LRP that we did not consider for this SMU due to lack of peer-reviewed stock-recruitment model fits <!--CW replace: parameter estimates --> for component CUs. However, this approach could be considered in future analyses given consensus on model structure and parameterization that provide realistic uncertainties in projections of population dynamics.
