More edits to chapter 5 (chum)

--- a/caseStudyWP/05-chap5.Rmd
+++ b/caseStudyWP/05-chap5.Rmd
@@ -104,10 +104,14 @@ Productivity (Ricker $\alpha$) & >4 & 25th (lower)  50th (upper) & 25th (lower) 
 
 
 
-Based on recommendations in @holtEvaluatingBenchmarksBiological2018 (Table \@ref(tab:holt-tab6)), Georgia Strait and Howe Sound Burrard Inlet fall in the category of using 25% as a lower benchmark and 50% as an upper benchmark (Ricker $\alpha$ 2.5-4, harvest rate 20-40%). Loughborough, Northeast Vancouver Island, and Upper Knight ($\alpha$ 1.5-2.5 and harvest rate 0-20%) had a 50% lower and upper benchmark recommended. Bute Inlet ($\alpha$ 1.5-2.5, harvest rate 20-40%) needed further evaluation and percentile benchmarks were not recommended. Percentile benchmarks were also not recommended for Southern Coastal Streams due to low productivity ($\alpha$ <1.5; Table \@ref(tab:CU-summary)). 
+Based on recommendations in @holtEvaluatingBenchmarksBiological2018 (Table \@ref(tab:holt-tab6)), Georgia Strait and Howe Sound-Burrard Inlet fall in the category of using 25% as a lower benchmark and 50% as an upper benchmark (Ricker $\alpha$ 2.5-4, harvest rate 20-40%). Loughborough, Northeast Vancouver Island, and Upper Knight ($\alpha$ 1.5-2.5 and harvest rate 0-20%) had a 50% lower and upper benchmark recommended. Bute Inlet ($\alpha$ 1.5-2.5, harvest rate 20-40%) needed further evaluation and percentile benchmarks were not recommended. Percentile benchmarks were also not recommended for Southern Coastal Streams due to low productivity ($\alpha$ <1.5; Table \@ref(tab:CU-summary)). 
 
 
-The methods for applying the Salmon Scanner to get CU status is described in Section \@ref(MethodsChapter). In applying the Salmon Scanner to ISC Chum, we used the percentile benchmarks as recommended in @holtEvaluatingBenchmarksBiological2018 for lower and upper benchmarks for the five CUs that have appropriate percentiles benchmarks identified (as described above). For Bute Inlet and Southern Coastal Streams, we did not use benchmarks. When benchmarks are not available, trends were used to assess status according to the decision tree (Figure \@ref(fig:decision-tree)).
+The methods for applying the Salmon Scanner to get CU status is described in Section \@ref(MethodsChapter). In applying the Salmon Scanner to ISC Chum, we used the percentile benchmarks as recommended in @holtEvaluatingBenchmarksBiological2018 for lower and upper benchmarks for the five CUs that have appropriate percentiles benchmarks identified (as described above). For Bute Inlet and Southern Coastal Streams, we did not use  benchmarks. When benchmarks were not available, trends were used to assess status according to the decision tree (Figure \@ref(fig:decision-tree)).
+
+<!-- Suggestion to replace the last two sentences above with the following to make it clear that the two CUs with trends applied were bute and SCS :
+For Bute Inlet and Southern Coastal Streams, for which percentile benchmarks were not available, the Salmon Scanner decision tree used trends to assess CU status (Figure \@ref(fig:decision-tree)).
+--> 
 
 
 ## LRP ESTIMATION: PROPORTION OF CUS
@@ -117,10 +121,22 @@ The methods for applying the Salmon Scanner to get CU status is described in Sec
 We looked at the proportion of CUs that had status estimates above the red zone (or, above the lower percentile benchmark) to determine in which years between 1960 and 2018 the LRP would have been breached. As with the Interior Fraser Coho and WCVI Chinook case studies, we required all CUs to be above the red zone for the ISC Chum SMU to be classified as being above the LRP. 
 
 
-The single-metric approach to assessing CU status based on percentiles has specific data requirements [@holtEvaluatingBenchmarksBiological2018] while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). For this comparison, we used percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. The benchmarks were estimated using the entire time series. 'Full' scenarios only included CUs with complete time series (no CUs with years with CU-level infilling). 'Partial' scenarios included CUs with incomplete time series, where the years that did not have observations in those CUs were omitted. 
+The single-metric approach to assessing CU status based on percentiles has specific data requirements [@holtEvaluatingBenchmarksBiological2018] while the Salmon Scanner approach can be applied to any CU with at least a consistent time-series of spawner abundances. To compare LRPs based on CU assessment from these two approaches we compared data subsets including those that used the same data for each method, and all appropriate <!--KH: available instead of appropriate?--> data for each method. We evaluated six different combinations of data and LRP methods (Table \@ref(tab:LRP-scenarios)). 
+
+<!-- KH: I think this could be a good place to go over the naming convention used in the table.  E.g., you could replcace the remaining text in this paragraph with something like this:
+
+When describing ISC Chum LRP scenarios in Table \@ref(tab:LRP-scenarios) and throughout this case study, we use the following labelling convention: *Metric : CU Status Method : Data Scenario*. 'Metric' refers to the choice to base all ISC Chum LRPs on the proportion of CUs above red CU status (Prop). The 'CU Status Method' can be based on the Pacific Salmon Status Scanner (Scanner) or on a single percentile benchmark used to characterize CU status (Percentile).  Finally, 'Data Scenario' labels indicate both the number of CUs represented (4, 5, or 7) and the completeness of the time series (Full or Partial). 'Full' scenarios only included CUs with complete time series (no CUs with years with CU-level infilling). 'Partial' scenarios included CUs with incomplete time series, where the years that did not have observations in those CUs were omitted. When using percentile benchmarks in these scenarios, we used percentiles based on @holtEvaluatingBenchmarksBiological2018. The benchmarks were estimated using the entire time series. 
+
+<!--KH: also - consider referencing the above section where you have already given specifics for each CU based on the holtEvaluation paper instead of citing hotlEvaluation again above. 
 
 
-For scenarios 1 and 2, we used CU status based on percentile benchmarks that are determined by productivity and historical exploitation outlined in @holtEvaluatingBenchmarksBiological2018 (Table \@ref(tab:LRP-scenarios)). This method used the annual escapement values to calculate the benchmarks and the <!--CW: escapement--> generational mean (geometric mean over 4 years) <!-- CW: I think this could be ommitted: of escapement  for year $i$ and previous three years to assess status in year $i$   CH: I suggest we do include at least this additional phrase: "of escapement to assess status in each year."-->. Scenario 1 includes the four CUs which had complete time series (observations in each year, no CU-level infilling required) and that also had appropriate percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. For example, Upper Knight was excluded because it did not have a complete time series, Southern Coastal Streams was excluded because it does not have an appropriate percentile benchmark, and Bute Inlet was excluded for both of these reasons. We then relaxed this assumption and included all CUs that meet the constraints of @holtEvaluatingBenchmarksBiological2018 even if they had missing data for some years (Scenario 2). This scenario included Upper Knight in some years, which meant that it had five CUs in some years and four in others. Thus, the power to detect red status varied among years in Scenario 2, using more of the available data than Scenario 1. For scenarios 3-6, we used status based on the Salmon Scanner. To compare results between status from percentiles and the Salmon Scanner, we used the Salmon Scanner on the same two data sets we used for percentiles. Scenarios 3 and 1 have the same data, and Scenarios 2 and 6 have the same data. Because the Salmon Scanner does not need benchmarks (percentile or otherwise) to assign status, it could also be used for CUs that did not have appropriate percentile benchmarks (Southern Coastal Streams and Bute Inlet). Scenario 4 only included CUs with a full time series, and Scenario 5 included Upper Knight and Bute Inlet, which had some missing years. 
+-->
+
+<!--KH: Note that if you accept some variation of my suggested text above, these next few lines should be deleted: -->
+For this comparison, we used percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018. The benchmarks were estimated using the entire time series. 'Full' scenarios only included CUs with complete time series (no CUs with years with CU-level infilling). 'Partial' scenarios included CUs with incomplete time series, where the years that did not have observations in those CUs were omitted. 
+
+
+For scenarios 1 and 2 <!-- in Table \@ref(tab:LRP-scenarios) -->, we used CU status based on percentile benchmarks that are determined by productivity and historical exploitation outlined in @holtEvaluatingBenchmarksBiological2018 (Table \@ref(tab:LRP-scenarios)). This method used the annual escapement values to calculate the benchmarks and the <!--CW: escapement--> generational mean (geometric mean over 4 years) <!-- CW: I think this could be ommitted: of escapement  for year $i$ and previous three years to assess status in year $i$   CH: I suggest we do include at least this additional phrase: "of escapement to assess status in each year."-->. Scenario 1 includes the four CUs that had complete time series (observations in each year, no CU-level infilling required) and that also had appropriate percentile benchmarks based on @holtEvaluatingBenchmarksBiological2018 <!--KH: could reference your CU summary table where you give percentiles instead of holtEvaluation -->. For example, Upper Knight was excluded because it did not have a complete time series, Southern Coastal Streams was excluded because it does not have an appropriate percentile benchmark, and Bute Inlet was excluded for both of these reasons. We then relaxed this assumption <!--KH; replace 'assumption' with 'requirement for all CUs to have data in all years' --> and included all CUs that meet the constraints of @holtEvaluatingBenchmarksBiological2018 even if they had missing data for some years (Scenario 2). This scenario included Upper Knight in some years, which meant that it had five CUs in some years and four in others. Thus, the power to detect red status varied among years in Scenario 2, using more of the available data than Scenario 1. For scenarios 3-6, we used status based on the Salmon Scanner. To compare results between status from percentiles and the Salmon Scanner, we used the Salmon Scanner on the same two data sets we used for percentiles. Scenarios 1 and 3 have the same data, and Scenarios 2 and 6 have the same data. Because the Salmon Scanner does not need benchmarks (percentile or otherwise) to assign status, it could also be used for CUs that did not have appropriate percentile benchmarks (Southern Coastal Streams and Bute Inlet). Scenario 4 only included CUs with a full time series, and Scenario 5 included Upper Knight and Bute Inlet, which had some missing years. 
 
 
 
