--- a/guidelinesWP/06-chap6.Rmd
+++ b/guidelinesWP/06-chap6.Rmd
@@ -104,10 +104,10 @@ When applying methods to specific case studies, we recommend that aggregate abun
 
 
 <!--CW: this last paragraph does not read as research recommendation, but as LRP recommendation, I am not sure it belongs here.
-Also I don't think that the fact taht we did not recommend a probabiliyu level for the aggregate abundance-based LRP is a problem. Science will still work on producing tha logistic/projecton-based model, then Management+science+stakeholders will work on setting the probability and time frame for the objective.-->
+Also I don't think that the fact that we did not recommend a probability level for the aggregate abundance-based LRP is a problem. Science will still work on producing tha logistic/projecton-based model, then Management+science+stakeholders will work on setting the probability and time frame for the objective.-->
 
 
-Although, dfoScienceAdvicePrecautionary2021 recommends that LRPs under Fish Stocks provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options may be <!--is?--> required. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. Probabilities are a reflexion of risk tolerance, and we can't identify it in a purely scientific way--> Alternatively, proportion-based LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance-based LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportion-based LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework (e.g.,  dfoManagementProcedureFramework2021), or management strategy evaluation, MSE, the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportion-based LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
+Although, dfoScienceAdvicePrecautionary2021 recommends that LRPs under Fish Stocks provisions be identified by Science, we were unable to identify a specific probability level for all CUs being above red status that aligned with scientific principles. Although it may be possible to select a probability level based on the IPCC likelihood categorization scheme (e.g., more likely than not, likely, very likely, virtually certain) further guidance on choosing among these options may be <!--is?--> required. <!--CW -I am not sure if the probability level is part of the LRP. I think it is part of the objective, and as such, it should not be determined by science. --> Alternatively, proportion-based LRPs can be used as the basis for serious harm instead of identifying a specific probability for aggregate abundance-based LRPs, where biological objectives for SMUs can be derived from the probability of achieving those proportion-based LRPs over a specified time frame to inform the performance of various candidate management procedures. The probability and time-frame identified within the objective are identified with managers and stakeholders. When used as part of Management Procedure Framework (e.g.,  dfoManagementProcedureFramework2021), or management strategy evaluation, MSE, the performance of a variety of management procedures against objectives can be evaluated, where management procedures can extend beyond aggregate abundance-based harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation. Therefore, proportion-based LRPs may be preferred as the biological basis of serious harm to clearly distinguish the biologically derived component from desired probability which requires input from managers and stakeholders.
 
 
 
